# dgxarley

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  COMFYUI_ARM64_SM121.md  COMFYUI_SM121_PATCHES.md  CUTLASS_NVFP4_SM121_PRD.md  DEEPSEEK_V4_FLASH_NVFP4_SGLANG_GB10.md  DIFFUSIONGEMMA_SGLANG_SCOPE.md  DOCKERHUB_OVERVIEW_dgx-spark-pytorch-dev.md  DOCKERHUB_OVERVIEW_dgx-spark-quant.md  DOCKERHUB_OVERVIEW_dgx-spark-sglang.md  DSA_speedup.md  DSV4_MEM_WORKAROUND.md  FIXED_SGLANG_ABORT_STATUS_CODE_UPSTREAM_BUG.md  FIXED_SGLANG_MOE_TUNE_UPSTREAM_BUG.md  FIXED_SGLANG_QWEN35_PP_UPSTREAM_BUG.md  FLASHINFER_CUDA_VERSION_SUBPROCESS_UPSTREAM_BUG.md  FLASHINFER_HEAD_DIM_512_UPSTREAM_BUG.md  HERMES_EMAIL_UPSTREAM.md  JUICEFS_MIGRATION_HOWTO.md  LITELLM_UPSTREAM_BUG.md  LOCAL_AGENTS.md  Makefile  NCCL_BANDWIDTH_PROFILING.md  QUANT_HY3_GOTCHAS.md  README.md  README_pypi.md  SGLANG_DEEPSEEK_V4_FLASH_KV_LORA_RANK_UPSTREAM_BUG.md  SGLANG_DEV2_VERSION_CHANGES.md  SGLANG_FP8_MOEMETHOD_FLASHINFER_CUTLASS_UPSTREAM_BUG.md  SGLANG_GEMMA4_UPSTREAM_BUG.md  SGLANG_MOE_TUNE_UPSTREAM_BUG.md  SGLANG_NVFP4_SHUFFLE_ROWS_OOB_UPSTREAM_BUG.md  SGLANG_QWEN35_PP_UPSTREAM_BUG.md  SGLANG_QWEN35_VISION_CONFIG_BUG.md  SGLANG_REASONING_TOKENS_UPSTREAM_BUG.md  SGLANG_SHARDED_SPECULATIVE_UPSTREAM_BUG.md  SGLANG_TP_EP_MOE_UPSTREAM_BUG.md  SGLANG_v0.5.10-20260429-dev1_VERSION_CHANGES.md  (+45 more)
dgxarley/: __init__.py
docs/: DGX Spark Setup - OpenWebUI Details EN.md  DGX Spark Setup - Scaling & Outlook EN.md  DGX Spark Setup - Skalierung & Ausblick.md  DGX Spark Setup - openwebui detailinfo.md  (+3 more)
(+439 files in other folders)
